# fs-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  RECIPES.md
src/codechu_fs/: __init__.py  atomic.py  mount.py  safety.py  tempdir.py  trash.py  walk.py
tests/: test_atomic.py  test_mount.py  test_safety.py  test_tempdir.py  test_trash.py  test_walk.py
